0723 10:03 회원탈퇴 기능 추가, css 추가

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -2644,7 +2644,7 @@ img {
 
 
 /*---- Login form ----*/
-.aa-login-form input[type="button"]{
+.aa-login-form input[type="button"], textarea{
   border: 1px solid #ccc;
   font-size: 16px;
   height: 40px;
