0726 11:29 세현씨 작업분 추가(회원가입 축하 이메일 발송 pom.xml업뎃)

--- a/src/main/webapp/resources/member/css/style.css
+++ b/src/main/webapp/resources/member/css/style.css
@@ -2638,6 +2638,7 @@ img {
 .aa-login-form label {
   font-weight: normal;
   margin-top: 8px;
+  display: block;
 }
 .aa-login-form label span {
   color: red;
