--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -2266,6 +2266,7 @@ img {
 #aa-product-details .aa-product-details-area .aa-product-details-bottom .aa-product-review-area .aa-review-nav li .media-body .aa-product-rating span {
   color: #ff6600;
 }
+
 #aa-product-details .aa-product-details-area .aa-product-details-bottom .aa-product-review-area .aa-review-nav li .media-body .reply-btn {
   color: #ff6666;
   display: inline-block;
@@ -2643,8 +2644,9 @@ img {
 }
 
 
+
 /*---- Login form ----*/
-.aa-login-form input[type="button"], textarea{
+.aa-login-form input[type="button"] textarea{
   border: 1px solid #ccc;
   font-size: 16px;
   height: 40px;
@@ -2652,7 +2654,8 @@ img {
   padding: 10px;
   width: 120px;
 }
-.aa-login-form input{
+
+.aa-login-form input, textarea{
   border: 1px solid #ccc;
   font-size: 16px;
   height: 40px;
@@ -2660,6 +2663,7 @@ img {
   padding: 10px;
   width: 100%;
 }
+
 
 .aa-login-form label {
   font-weight: normal;
