0809 11:46 Service 게시판 로그인 없이 접근 가능 공지사항 글 내용 출력부분 크게 설정 FAQ CONTACT에서도 게시글 정상 출력

--- a/src/main/webapp/resources/css/star-rating.css
+++ b/src/main/webapp/resources/css/star-rating.css
@@ -19,9 +19,9 @@
   cursor:pointer;
 }
 
-/* .star-rating :checked ~ label { */
-/*   color:#f90; */
-/* } */
+.star-rating :checked ~ label {
+  color:#f90;
+}
 
 .star-rating label:hover,
 .star-rating label:hover ~ label {
